refactor. modify handleErrorAsync to routes
